Vertical alignment fix for type preview

--- a/src/style/shared/color-input.less
+++ b/src/style/shared/color-input.less
@@ -10,7 +10,6 @@
 }
 
 .color-input .type__preview {
-    height: 100%;
     line-height: normal;
 }
 
